# Nova-AI

./: .env  .gitignore  build.sh  clean_for_github.sh  index.html  package-lock.json  package.json  run.sh
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/binaries/: sbom-checker-go-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: actor_registry.rs  api_server.rs  arch_browser.rs  ast_actor.rs  attack_graph.rs  commands.rs  config.rs  cross_pipeline.rs  datastores.rs  db.rs  exec_engine.rs  export.rs  git_agent.rs  graph_explorer.rs  lib.rs  main.rs  meta_graph.rs  mock_vulnerable_service.rs  nova_client.rs  nova_shield.rs  patch_generator.rs  pipeline.rs  pipeline_stages.rs  policies.rs  query_engine.rs  rules.rs  sbom_graph.rs  scheduler.rs  supply_chain.rs  trivy.rs  trust_exec.rs  trust_graph.rs  unified_graph.rs
src-tauri/src/agents/: chat_router.rs  compliance_agent.rs  exploit_agent.rs  fuzz_agent.rs  ipc_bus.rs  loop_state.rs  mod.rs  patch_agent.rs  playbook_agent.rs  reviewer_agent.rs  team_orchestration.rs  threat_intel.rs
src-tauri/src/agents/remediation/: engine.rs
src-tauri/src/engine/: artifact.rs  context.rs  graph.rs  image_forensics.rs  mcp_client.rs  mod.rs  nodes.rs  onboarding.rs  posture_timeline.rs  reporting.rs  runtime_monitor.rs  soc_dashboard.rs  sop.rs  store.rs  threat_feed.rs  wasm.rs
src-tauri/src/engine/mcp/: mod.rs  (+3 more)
src-tauri/src/secql/: ast.rs  exec.rs  mod.rs  parser.rs
src-tauri/src/security/: audit.rs  canary_guard.rs  estop.rs  mod.rs  playbooks.rs  sandboxing.rs  syscall_anomaly.rs
(+104 files in other folders)
